# ashdl

./: .VolumeIcon.icns  .gitignore  Cargo.toml  Planner.docx  README.md
.fseventsd/: 000000000170fcde  000000000170fcdf  000000000171066f  0000000001710670  fseventsd-uuid
.run/: Testing (SC).run.xml  Testing (YT).run.xml
src/: main.rs  spotify.rs  utils.rs  youtube.rs
src/spotify/: album.rs  client.rs  playlist.rs  song.rs  tag.rs  utils.rs
src/utils/: parser.rs  run.rs  screen.rs  tag.rs
src/youtube/: download.rs
