[package]
name = "ashdl"
version = "0.1.1"
edition = "2021"

# Authors And Information
authors = [ "Ashrit Yarava <ashdragon95@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/Ashrit-Yarava/ashdl"
repository = "https://github.com/Ashrit-Yarava/ashdl"
description = "Another spotify playlist downloader."

# License
license = "MIT"

# Keywords
keywords = [ "spotify", "music", "ashdl", "downloader", "playlist" ]
categories = [ "multimedia::audio" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
aspotify = "0.7.1"
rayon = "1.5"
id3 = "1.0.2"
reqwest = "0.11.10"
image = "0.24.1"
colored = "2.0.0"

[dependencies.async-std]
version = "1.6"
features = ["attributes", "tokio1"]